--- a/style.css
+++ b/style.css
@@ -43,11 +43,18 @@ header{
     border:1px dotted black;
 }
 
+.col-30{
+    width: 30%;
+    border:1px dotted black;
+}
 .col-50{
     width: 50%;
     border:1px dotted black;
 }
-
+.col-70{
+    width: 70%;
+    border:1px dotted black;
+}
 .col-100{
     width: 100%;
     border:1px dotted black;
@@ -66,7 +73,15 @@ header{
 .bg-magenta{
     background-color: #EE82EE ;
 }
-
+.bg-dodger-blue{
+    background-color: #1E90FF;
+}
+.bg-pink{
+    background-color: #FFC0CB;
+}
+.bg-grey{
+    background-color: #D3D3D3;
+}
 
 
 .py-20{
